[metadata]
name = Table1
version = 0.1.0
author = Golpira
description = Table1 with MannWithneyU test for two group comparisons
long_description = file: README.md
long_description_content_type = text/markdown
license = NONE
classifiers =
    Programming Language :: Python :: 3
    License :: NONE :: NONE

[options]
packages = find:
python_requires = >=3.7
